fix navbar alignment

--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ p   {
 .page-header    {
     background-color: red;
     display: flex;
+    justify-content: space-between;
 }
 
 .heading  {
